exofrontend-template.yaml
---
# Source: td-exo-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdsdevusauth-td-exo-frontend
  labels:
    helm.sh/chart: td-exo-frontend-0.1.0
    app.kubernetes.io/name: td-exo-frontend
    app.kubernetes.io/instance: tdsdevusauth
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3210
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: td-exo-frontend
    app.kubernetes.io/instance: tdsdevusauth
---
# Source: td-exo-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdsdevusauth-td-exo-frontend
  labels:
    helm.sh/chart: td-exo-frontend-0.1.0
    app.kubernetes.io/name: td-exo-frontend
    app.kubernetes.io/instance: tdsdevusauth
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: td-exo-frontend
      app.kubernetes.io/instance: tdsdevusauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: td-exo-frontend
        app.kubernetes.io/instance: tdsdevusauth
    spec:
      imagePullSecrets:
        - name: all-icr-io
      hostAliases:
        - ip: "169.61.100.156"
          hostnames:
            - "auth-exo-devus.tdse.now.hclsoftware.cloud"
      securityContext:
        {}
      containers:
        - name: td-exo-frontend
          securityContext:
            {}
          image: "us.icr.io/tds-repo/exo-frontend:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3210
              protocol: TCP
              hostPort: 3210
          resources:
            {}
---
# Source: td-exo-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdsdevusauth-td-exo-frontend
  labels:
    helm.sh/chart: td-exo-frontend-0.1.0
    app.kubernetes.io/name: td-exo-frontend
    app.kubernetes.io/instance: tdsdevusauth
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  rules:
    - host: "auth-exo-frontend-devus.tdse.now.hclsoftware.cloud"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tdsdevusauth-td-exo-frontend
                port:
                  number: 3210
