service.yaml
# Service Config
---
apiVersion: v1
kind: Service
metadata:
  name: tds-devops-jenkins-service
  namespace: tds-devops
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: jenkins
  type: ClusterIP  
  ports:
    - name: httpport
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: jnlpport
      port: 50000
      protocol: TCP
      targetPort: 50000
apiVersion: networking.k8s.io/v1
# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tds-devops-jenkins-ingress
  namespace: tds-devops
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
  - host: tds-devops-jenkins.tdse.now.hclsoftware.cloud
    http:
      paths:
      - backend:
          service:
            name: tds-devops-jenkins-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tds-devops-jenkins.tdse.now.hclsoftware.cloud
    secretName: tdse.now.hclsoftware.cloud-cert
